@@ -1,4 +1,5 @@
 0.02
+ - Update Module::Install to 1.12 version.
 
 0.01 2014-06-20T21:28:06+02:00
  - First version.
